--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,29 @@
-name: React CI/CD
+name: "Deploy to aws"
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+
+# Trigger the workflow from the github ui
+on: workflow_dispatch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    deploy:
+        runs-on: self-hosted
+        steps:
+            - name: "Setup nodejs"
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "21"
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+            - name: "Checkout code"
+              uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
+            - name: "Install dependencies"
+              run: npm install
 
-      - name: Install dependencies
-        run: npm ci
+            - name: "Install pm2 globally"
+              run: npm install pm2 -g  
 
-      - name: Run build
-        run: npm run build
-
-      - name: Run tests
-        run: npm test -- --watchAll=false
+            - name: "Run the tests"
+              run: npm test
+            
+            - name: "Deploy to aws"
+              run: pm2 start src/index.js
