--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
                   node-version: "21"
 
             - name: "Checkout code"
-              uses: actions/checkout@v2
+              uses: actions/setup-node@v3
 
             - name: "Install dependencies"
               run: npm install
