--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,30 @@
-name: "Deploy to aws"
+name: Node.js CI/CD
 
-
-# Trigger the workflow from the github ui
-on: workflow_dispatch
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-    deploy:
-        runs-on: self-hosted
-        steps:
-            - name: "Setup nodejs"
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "21"
+  build:
+    runs-on: ubuntu-latest
 
-            - name: "Checkout code"
-              uses: actions/setup-node@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-            - name: "Install dependencies"
-              run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-            - name: "Install pm2 globally"
-              run: npm install pm2 -g  
+      - name: Install dependencies
+        run: npm install
 
-            - name: "Run the tests"
-              run: npm test
-            
-            - name: "Deploy to aws"
-              run: pm2 start src/index.js
+      - name: Run tests
+        run: npm test
+
+      # Optional: Run your server (only useful for deploy, not for CI tests)
+      # - name: Start application
+      #   run: npm start
