--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,30 @@
 name: Node.js CI/CD
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+on: workflow_dispatch
+  
 jobs:
   build:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+             node-version: 18
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+     
 
       - name: Install dependencies
         run: npm install
 
       - name: Run tests
         run: npm test
+
+      - name: "Deploy to aws:"
+        run: pm2 start src/index.js
 
       # Optional: Run your server (only useful for deploy, not for CI tests)
       # - name: Start application
