--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-             node-version: 18
+             node-version: 21
 
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-     
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
       - name: Install dependencies
         run: npm install
