--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        # run: - name: Install dependencies
+        run: npm install --verbose
 
       - name: Run tests
         run: npm test
